--- a/first-vite-react-project/style.css
+++ b/first-vite-react-project/style.css
@@ -38,6 +38,10 @@ nav {
     color: #DEEBF8;
     height:100%;
     padding-left:110px;
+    background-image: url(images/react-background.svg);
+    background-repeat: no-repeat;
+    background-position: center 50%;
+    background-size: 800px;
 }
 
 .main--headline {
@@ -62,5 +66,4 @@ nav {
     font-weight:bold;
     font-size: 25px;
     margin-right:10px;
-
 }
