--- a/airbnb-experiences-clone/style.css
+++ b/airbnb-experiences-clone/style.css
@@ -1,5 +1,6 @@
 * {
     box-sizing: border-box;
+    font-family: sans-serif;
 }
 
 body {
@@ -15,4 +16,12 @@ nav {
 
 .nav--logo {
     max-width:100px;
+}
+
+section {
+    padding: 20px 20px 20px 100px;
+}
+
+.hero--text {
+    font-size:25px;
 }
