--- a/airbnb-experiences-clone/style.css
+++ b/airbnb-experiences-clone/style.css
@@ -33,12 +33,12 @@ nav {
 
 /* Card section */
 .card {
-    width:200px;
+    width:250px;
     display:flex;
     flex-direction: column;
 }
 .card--photo {
-    width:200px;
+    width:250px;
 }
 
 .card--review {
@@ -56,4 +56,8 @@ nav {
 
 .card--review_text span {
     color: gray;
+}
+
+.card--description {
+    margin:0px;
 }
