--- a/airbnb-experiences-clone/style.css
+++ b/airbnb-experiences-clone/style.css
@@ -33,6 +33,7 @@ nav {
 
 /* Card section */
 .card {
+    margin:20px 20px 20px 50px;
     width:250px;
     display:flex;
     flex-direction: column;
