--- a/airbnb-experiences-clone/style.css
+++ b/airbnb-experiences-clone/style.css
@@ -44,6 +44,7 @@ nav {
     flex: 0 0 auto;
     display:flex;
     flex-direction: column;
+    position:relative;
 
 }
 .card--photo {
@@ -82,4 +83,14 @@ nav {
 
 .card--price span{
    font-weight:bold;
+}
+
+.card--badge {
+    position: absolute;
+    top: 6px;
+    left: 6px;
+    background-color: white;
+    padding: 5px 7px;
+    border-radius: 2px;
+    font-weight: bold;
 }
